# cs_theory

./: .envrc  .gitignore  .nojekyll  Manifest.toml  _quarto-man.yml  _quarto.yml  article.html  article.qmd  environment.yml  final.html  index.html  index.md  index.pptx  index.qmd  justfile  main.jl  main.nb  notes.html  notes.md  notes.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  test.nb
_manuscript/: index.html
_manuscript/_tex/: article.tex
_manuscript/_tex/files/bibliography/: research.bib
files/: _communication.md  bibexport.bib  communication.html  overleaf.just  quarto.just
nbs/: analysis.qmd  examples.html  examples.ipynb  examples.py  main.nb  test.nb  validation.nb
presentations/: AGU24.html  AGU24.qmd  grp.html  grp.pptx  grp.qmd  grpMeeting_2024-06.pptx  grpMeeting_2024-07-22.pptx  index.pptx  index_m.pptx
