[project]
name = "cs"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10, < 3.13"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
ipykernel = "*"
xarray = "*"
netcdf4 = "*" # for `pyspedas`
scipy = "*"
scienceplots = "*"
jupyter_bokeh = "*"
hvplot = ">=0.10.0"

[tool.pixi.pypi-dependencies]
matplotlib = "*"
beforerr = { path = "../../src/beforerr_dev", editable = true }
discontinuitypy = { path = "../discontinuitypy", editable = true, extras = ["plot"] }
space_analysis = { path = "../../src/space-analysis.py", editable = true, extras = ["io"] }
